@@ -1,3 +1,12 @@
+2009-01-31  Callum McKenzie  <callum@spooky-possum.org>
+
+	* dock.c (gnome_volume_applet_dock_new): Add a border around the
+	dock.
+
+	* applet.c (gnome_volume_applet_button): Double click -> toggle
+	mute rather than launching the volume control. Mute is the more
+	common command.
+
 2009-01-27  Callum McKenzie  <callum@spooky-possum.org>
 
 	* preferences.[ch]: 
